<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="match_parent"
	android:gravity="center" >

	<LinearLayout
		android:layout_width="440dp"
		android:layout_height="wrap_content"
		android:background="@drawable/popup_blue_fill_title_box"
		android:orientation="vertical" >
		
	    <RelativeLayout
            android:id="@+id/close"
            android:layout_width="match_parent"
            android:layout_height="57dp" >

		<!-- popup header -->

			<TextView
				android:id="@+id/title"
				android:layout_width="match_parent"
				android:layout_height="60dp"
				android:gravity="center_vertical"
				android:paddingLeft="30dp"
				android:text="@string/popup_title_application_send"
				android:textColor="@color/white"
				android:textSize="@dimen/text_size_2x_large" />
<!-- 			
			<ImageView
	            android:id="@+id/btn_close"
	            android:layout_width="@dimen/popup_icon_x_size"
	            android:layout_height="@dimen/popup_icon_x_size"
	            android:layout_alignParentRight="true"
	            android:layout_centerVertical="true"
	            android:layout_marginRight="10dp"
	            android:background="@drawable/popup_title_close_img" />  -->
	    </RelativeLayout>
		<!-- popup header -->

		<!-- popup body -->

		<RelativeLayout
			android:id="@+id/sending"
			android:layout_width="match_parent"
			android:layout_height="130dp"
			android:background="@color/white"
			android:visibility="visible" >

			<TextView
				android:id="@+id/sendingText"
				android:layout_width="fill_parent"
				android:layout_height="40dp"
				android:gravity="center"
				android:layout_centerHorizontal="true"
				android:layout_marginTop="20dp"
				android:text="@string/popup_text_application_sending"
				android:textColor="@color/dark_gray"
				android:textSize="@dimen/text_size_medium" />

			<com.pentaon.vzon.ui.custom.view.PentaonProgressBar
				android:id="@+id/pb"
				style="?android:attr/progressBarStyleHorizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
				android:layout_centerVertical="true"
				android:max="100"
				android:maxHeight="25dip"
				android:minHeight="25dip"
				android:progressDrawable="@drawable/prograssbar_color"
				android:progress="0" />
		</RelativeLayout>

		<View
			android:layout_width="fill_parent"
			android:layout_height="@dimen/popup_line_2dp"
			android:background="@color/poup_new_title_underline_color" />
		
		<RelativeLayout
			android:id="@+id/sendFail"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:visibility="gone" >

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
				android:gravity="center" >

				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="@drawable/img_alert" />

				<TextView
					android:id="@+id/failText"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dp"
					android:gravity="center"
					android:text="@string/popup_text_application_sending_fail"
					android:textColor="@color/text_normal_gray_color"
					android:textSize="@dimen/text_size_x_large" />
			</LinearLayout>
		</RelativeLayout>

		<!-- popup body -->


		<!-- popup footer -->

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="70dp"
			android:gravity="center" >

			<Button
				android:id="@+id/cancel"
				android:layout_width="130dp"
				android:layout_height="43dp"
				android:background="@drawable/btn_deep_color"
				android:textColor="@color/btn_color_clear_white"
				android:gravity="center"
				android:text="@string/popup_btn_text_cancel"
				android:textSize="@dimen/text_size_x_large" />

			<Button
				android:id="@+id/ok"
				android:layout_width="130dp"
				android:layout_height="43dp"
				android:layout_marginLeft="10dp"
				android:layout_toRightOf="@+id/cancel"
				android:background="@drawable/btn_deep_color"
				android:textColor="@color/btn_color_clear_white"
				android:gravity="center"
				android:text="@string/popup_btn_text_ok"
				android:textSize="@dimen/text_size_x_large"
				android:visibility="gone" />
		</RelativeLayout>
		<!-- popup footer -->

	</LinearLayout>

</LinearLayout>