<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/black"
  >

  <FrameLayout
    android:id="@+id/PointViewLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:visibility="visible"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    >

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <com.pentaon.vzon.ui.scan.PointView
        android:id="@+id/point_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        />

      <!--"상단 title 영역" 및 검정 이미지-->
      <View
        android:id="@+id/back_top"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:background="@color/black"
        />
      <!--하단 검정 이미지-->
      <View
        android:id="@+id/back_bottom"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@color/black"
        />
      <TextView
        android:id="@+id/tvmasking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="15dp"
        android:gravity="center"
        android:text="@string/masking_msg"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_medium"
        android:visibility="gone"
        />
    </RelativeLayout>
  </FrameLayout>

  <!--상단 title 영역-->
  <LinearLayout
    android:id="@+id/top_layout"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:background="@color/black"
    android:orientation="horizontal"
    android:visibility="visible"
    app:layout_constraintTop_toTopOf="parent"
    />

  <!--상단 버튼 container-->
  <android.support.constraint.ConstraintLayout
    android:id="@+id/top_button_container"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    >
    <!--"back"버튼-->
    <!--<android.support.constraint.ConstraintLayout
      android:id="@+id/act_point_changed_button_cancel"
      android:layout_width="85dp"
      android:layout_height="90dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      >-->
    <LinearLayout
      android:id="@+id/act_point_changed_button_cancel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      >
      <ImageView
        android:layout_width="@dimen/common_phone_button_width"
        android:layout_height="@dimen/common_phone_button_height"
        android:padding="5dp"
        android:src="@drawable/ic_back_btn"
        />
      <TextView
        style="@style/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-5dp"
        android:layout_gravity="center_vertical"
        android:text="@string/popup_btn_text_back"
        />
    </LinearLayout>
    <!--</android.support.constraint.ConstraintLayout>-->

    <!--마스킹 "추가", "삭제" 버튼-->
    <LinearLayout
      android:id="@+id/act_point_changed_container_mask_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      >
      <!--"마스크 추가" 버튼-->
      <ImageButton
        android:id="@+id/btn_mask_add"
        android:layout_width="30dp"
        android:layout_height="32dp"
        android:background="@drawable/ic_masking_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
      <!--"마스크 삭제" 버튼-->
      <ImageButton
        android:id="@+id/btn_mask_remove"
        android:layout_width="30dp"
        android:layout_height="32dp"
        android:layout_marginLeft="40dp"
        android:background="@drawable/ic_trash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    </LinearLayout>

    <!--확인 버튼-->
    <LinearLayout
      android:id="@+id/act_point_changed_button_ok"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginRight="25dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      >
      <ImageView
        android:layout_width="@dimen/common_phone_button_width"
        android:layout_height="@dimen/common_phone_button_height"
        android:padding="5dp"
        android:src="@drawable/selector_button_ok"
        />
      <TextView
        style="@style/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-5dp"
        android:layout_gravity="center_vertical"
        android:text="@string/popup_btn_text_ok"
        />

    </LinearLayout>

    <!--저장 버튼-->
    <LinearLayout
      android:id="@+id/act_point_changed_button_save"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginRight="25dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      >
      <ImageView
        android:layout_width="@dimen/common_phone_button_width"
        android:layout_height="@dimen/common_phone_button_height"
        android:padding="5dp"
        android:src="@drawable/ic_download"
        />
      <TextView
        style="@style/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/popup_btn_text_save"
        />
    </LinearLayout>


    <!--꼭지점 돋보기 뷰-->
    <!--<com.pentaon.vzon.views.ImageMagnifier
      android:id="@+id/act_point_changed_zoom_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />-->
  </android.support.constraint.ConstraintLayout>

  <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="80dp"
    app:layout_constraintBottom_toBottomOf="parent"
    android:visibility="gone"
    >
    <ImageView
      android:id="@+id/btn_rotate_left"
      android:layout_width="40dp"
      android:layout_height="42.5dp"
      android:background="@drawable/ic_rotate_left"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginStart="40dp"
      />
    <ImageView
      android:id="@+id/btn_rotate_right"
      android:layout_width="40dp"
      android:layout_height="42.5dp"
      android:background="@drawable/ic_rotate_right"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginEnd="40dp"
      />

  </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>